--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <div class="container">
-            <div class="container--wallpaper box">Wallpaper</div>
+            <div class="container--wallpaper box">
+                <img src="./attributes/img1.png" alt="simple wallpaper">
+            </div>
             <div class="container--stats box">Date</div>
             <div class="container--bookmarks box">Bookmarks</div>
         </div>
